Pamela Fox says to add overflow: hidden; to fix the "long copyright strings run out the left end of the map div" bug. http://code.google.com/p/gmaps-api-issues/issues/detail?id=308
So, by popular demand, I'm adding a CSS rule for that.

Tested in Seamonkey and IE6.

--- a/gmap.css
+++ b/gmap.css
@@ -28,3 +28,8 @@ v\:* {
 .gmap-right {
   float: right;
 }
+
+.gmap-map {
+  /* Don't let long copyright texts stick out the side of the map div. */
+  overflow: hidden;
+}
